--- a/assets/sass/common/decoration.scss
+++ b/assets/sass/common/decoration.scss
@@ -14,8 +14,8 @@
 		height: 100%;
 		z-index: -1;
 		background-color: var(--shadow, black);
-		bottom: $border-width * -1 - $shadow-width;
-		right: $border-width * -1 - $shadow-width;
+		bottom: $border-width * -1 - ($border-width / 2);
+		right: $border-width * -1 - ($border-width / 2);
 	}
 }
 
