--- a/assets/sass/components/page.scss
+++ b/assets/sass/components/page.scss
@@ -1,5 +1,9 @@
 .page {
-	@include constrain;
+	padding: 0 $page-margin-mobile;
+
+	@include larger-than(mobile) {
+		padding: 0 $page-margin-tablet;
+	}
 }
 
 .page__heading {
@@ -9,6 +13,8 @@
 }
 
 .page__content {
+	@include constrain;
+
 	h2 {
 		margin: 0 0 1.5em;
 	}
