--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -1,25 +1,27 @@
 {{ define "main" }}
   <div class="page">
-  	{{ partial "nav.html" }}
-    <main id="main">
-      <h1 class="page__heading">{{.Title}}</h1>
-      <p>I write about design, technology, and things completely unrelated to either design or technology.</p>
-      <p>Recently I have written about <a href="/the-meg-ryan-effect/">why Britain owes Meg Ryan an apology</a>, <a href="/finding-a-voice/">how to write like you speak</a>, and <a href="/disney-earth/">what happens when Disney cruise ships sail to remote Icelandic towns</a>.</p>
-      <h2>Subscribe</h2>
-      <p>Enter your email address to receive new posts in your inbox:</p>
-      {{ partial "mailchimp.html" }}
-    	<h2>All posts</h2>
-      <ul class="post-list">
-      <!-- Ranges through content/posts/*.md -->
-      {{ range .Pages }}
-        <li class="post-list__item">
-          <a href="{{.Permalink}}" class="post-list__link">
-            <h3 class="post-list__heading">{{.Title}}</h3>
-          </a>
-          <time datetime="{{.Date}}" class="post-list__date">{{.Date.Format "2 January 2006"}}</time>
-        </li>
-      {{ end }}
-      </ul>
-    </main>
+    {{ partial "nav.html" }}
+    <div class="page__content">
+      <main id="main">
+        <h1 class="page__heading">{{.Title}}</h1>
+        <p>I write about design, technology, and things completely unrelated to either design or technology.</p>
+        <p>Recently I have written about <a href="/the-meg-ryan-effect/">why Britain owes Meg Ryan an apology</a>, <a href="/finding-a-voice/">how to write like you speak</a>, and <a href="/disney-earth/">what happens when Disney cruise ships sail to remote Icelandic towns</a>.</p>
+        <h2>Subscribe</h2>
+        <p>Enter your email address to receive new posts in your inbox:</p>
+        {{ partial "mailchimp.html" }}
+      	<h2>All posts</h2>
+        <ul class="post-list">
+        <!-- Ranges through content/posts/*.md -->
+        {{ range .Pages }}
+          <li class="post-list__item">
+            <a href="{{.Permalink}}" class="post-list__link">
+              <h3 class="post-list__heading">{{.Title}}</h3>
+            </a>
+            <time datetime="{{.Date}}" class="post-list__date">{{.Date.Format "2 January 2006"}}</time>
+          </li>
+        {{ end }}
+        </ul>
+      </main>
+    </div>
   </div>
 {{ end }}
