--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -48,11 +48,13 @@
     {{ block "footer" . }}
       <!-- More shared code, perhaps a footer but that can be overridden if need be in  -->
       <footer class="footer">
-        <span>© <a href="/">James Shakespeare</a> {{ dateFormat "2006" now }}</span>
-        <ul class="footer__links">
-            <li class="footer__link"><a href="/posts/index.xml">RSS</a></li>
-            <li class="footer__link"><a href="https://twitter.com/jeshake">Twitter</a></li>
-        </ul>
+        <div class="footer__contents">
+          <span>© <a href="/">James Shakespeare</a> {{ dateFormat "2006" now }}</span>
+          <ul class="footer__links">
+              <li class="footer__link"><a href="/posts/index.xml">RSS</a></li>
+              <li class="footer__link"><a href="https://twitter.com/jeshake">Twitter</a></li>
+          </ul>
+        </div>
       </footer>
     {{ end }}
   </body>
