explicit twitter card tags

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -22,9 +22,11 @@
     <meta name="twitter:card" content="summary_large_image">
     {{ if .Params.featured_image }}
     <meta property="og:image" content="{{ .Site.BaseURL }}{{.Params.featured_image}}">
+    <meta name="twitter:image" content="{{ .Site.BaseURL }}{{.Params.featured_image}}">
     {{ if .Params.featured_image_alt }}<meta name="twitter:image:alt" content="{{ .Params.featured_image_alt }}">{{end}}
     {{ else }}
     <meta property="og:image" content="{{ .Site.BaseURL }}/ogimage.png">
+    <meta name="twitter:image" content="{{ .Site.BaseURL }}/ogimage.png">
     {{ end }}
     {{ if eq .Section "posts" }}
     <meta property="og:type" content="article" />
