add console.log post to posts index page

--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -5,7 +5,7 @@
       <main id="main">
         <h1 class="page__heading">{{.Title}}</h1>
         <p>I write about design, technology, and things completely unrelated to either design or technology.</p>
-        <p>Recently I have written about <a href="/the-meg-ryan-effect/">why Britain owes Meg Ryan an apology</a>, <a href="/finding-a-voice/">how to write like you speak</a>, and <a href="/disney-earth/">what happens when Disney cruise ships sail to remote Icelandic towns</a>.</p>
+        <p>Recently I have written about <a href="/javascript-console-log-etymology/">the etymology of JavaScript’s console.log function</a>, <a href="/the-meg-ryan-effect/">why Britain owes Meg Ryan an apology</a>, <a href="/finding-a-voice/">how to write like you speak</a>, and <a href="/disney-earth/">what happens when Disney cruise ships sail to remote Icelandic towns</a>.</p>
         <h2>Subscribe</h2>
         <p>Enter your email address to receive new posts in your inbox:</p>
         {{ partial "mailchimp.html" }}
